HTML & JS | Images on display-none + carousel Array Object

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,14 @@ h1 {
     margin:25px 0;
 }
 
+.d-none {
+    display:none;
+}
+
+.d-block {
+    display:block;
+}
+
 .image-container {
     width:900px;
     height:450px;
