--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,9 +66,12 @@ h1 {
 }
 
 #description {
+    padding:10px;
+    width:100%;
+    background-color: rgba(0,0,0,0.6);
     color:white;
-    font-size:20px;
+    font-size:15px;
     bottom:10px;
-    right:10px;
+    right:0;
     text-align:right;
 }
