--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,18 @@ h1 {
     display:block;
 }
 
+.d-flex {
+    display:flex;
+}
+
+.container {
+    margin:auto;
+    max-width:1200px;
+}
+
 .image-container {
     width:900px;
     height:450px;
-    margin:0 auto;
 }
 
 .image-container > img {
@@ -75,4 +83,9 @@ h1 {
     bottom:10px;
     right:0;
     text-align:right;
+}
+
+#preview {
+    width:30%;
+    border:1px solid red;
 }
