--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     padding:0;
 }
 
+:root {
+    --var-num-of-images: 5;
+}
+
 img {
     max-width:100%;
     max-height:100%;
@@ -87,5 +91,18 @@ h1 {
 
 #preview {
     width:30%;
-    border:1px solid red;
+    height:450px;
+    /* border:1px solid red; */
+}
+
+img {
+    margin:0;
+    padding:0;
+    display: block;
+}
+
+#preview > img {
+    width:100%;
+    height:calc(450px / var(--var-num-of-images));
+    object-fit:cover;
 }
