CSS | Cursor pointer on clickable images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ img {
     object-fit:cover;
     filter: grayscale(100%); 
     -webkit-filter: grayscale(100%);
+    cursor:pointer;
 }
 
 .selected-image {
